# dermavision-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  mypy.ini  proposal.md  pyproject.toml  run_full_pipeline.cmd
.github/workflows/: ci.yml
backend/: main.py
backend/api/: schemas.py
backend/api/db/: models.py  session.py
backend/api/repositories/: history_repository.py
backend/api/routes/: health.py  history.py  predict.py  system.py
backend/api/services/: inference_service.py  metrics.py  uploads.py
configs/: config.yaml
docker/: frontend.Dockerfile
docs/: api.md  architecture.md  dataset_card.md  deployment_guide.md  developer_guide.md  model_card.md  training_guide.md  troubleshooting.md  user_manual.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: HeatmapPanel.tsx  Hero.tsx  Layout.tsx  Navigation.tsx  PredictionResultCard.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: AboutPage.tsx  DocumentationPage.tsx  HistoryPage.tsx  LandingPage.tsx  PerformancePage.tsx  PredictionPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
notebooks/: 01_dataset_analysis.ipynb  02_preprocessing.ipynb  03_baseline_training.ipynb  04_transfer_learning.ipynb  05_hyperparameter_tuning.ipynb  06_segmentation.ipynb  07_explainability.ipynb  08_model_evaluation.ipynb
reports/: model_card.md  training_summary.md
scripts/: evaluate.py  export_model.py  train.py
src/dermavision_ai/: __init__.py
src/dermavision_ai/core/: constants.py  logging.py  settings.py  utils.py
src/dermavision_ai/data/: __init__.py  augmentation.py  dataset.py  discovery.py  preprocessing.py
src/dermavision_ai/evaluation/: reports.py
src/dermavision_ai/explainability/: gradcam.py
src/dermavision_ai/inference/: service.py
tests/: conftest.py  test_api.py  test_inference.py  test_preprocessing.py
(+8 files in other folders)
